# Kinect3D

./: .gitignore  CMakeLists.txt  FIFO.cpp  FramePacket.cpp  KinectCapture.cpp  PLY_Process.cpp  PlyIO.cpp  README.md  RGBD_FIFO_Process.cpp  calibration.cpp  cameras.config  main.cpp  utils.cpp  valgrind_test.sh  widget.cpp  widget.ui
cuda/: CMakeLists.txt  Transform.cu  color_correction.cu  cuda.cuh  overlap_removal_cuda.cu
include/: 3DRealTimeRender.h  FIFO.h  FramePacket.h  ICP.h  KinectCapture.h  PLY_Process.h  PlyIO.h  RGBD_FIFO_Process.h  Save_RGBD.h  Synchronize.h  Transform2world.h  alignment.h  calibration.h  common.h  config.h  meshing.h  moc_widget.cpp  opencv_head.h  openglRender.h  overlap_removal.h  registeration.h  typedef.h  typedefs.h  ui_widget.h  utils.h  widget.h
include/opengl/glad/include/glad/: glad.h
include/opengl/glad/src/: glad.cpp
include/rtl/: Base.hpp  Evaluator.hpp  Line.hpp  RANSAC.hpp  RTL.h
src/: FramePacket.cpp  ICP.cpp  KinectCapture.cpp  PlyIO.cpp  RGBD_FIFO_Process.cpp  Save_RGBD.cpp  Transform2world.cpp  alignment.cpp  calibration.cpp  main.cpp  meshing.cpp  openglRender.cpp  overlap_removal.cpp  registeration.cpp  utils.cpp  widget.cpp
